Get crud request handler reading event data from json and storing entities in the datastore.

--- a/views/home.html
+++ b/views/home.html
@@ -1,4 +1,3 @@
 <div>
-    Welcome to SlickBudget. That might be a lame name...
-    Today is {{home.today}}.
+    Welcome to Moneta. Today is {{home.today}}.
 </div>
