Save events to server after adding on client, track when they are successful or fail. Clean up server code a bit, and fix some missing query filters when fetching data. Also, added lodash.

--- a/views/track.html
+++ b/views/track.html
@@ -29,11 +29,15 @@
         <h4>Expenses</h4>
         <p class="animate-fade" ng-repeat="expense in track.getExpenses()">
             {{expense.amount | currency}} | {{expense.comment}} | {{expense.date | date : 'short'}}
+            <span ng-if="expense.saveError" class="label label-danger">Not synced! Try again.</span>
+            <span ng-if="expense.saveSuccess" class="label label-success">Saved</span>
         </p>
         <h5>Total: {{track.getTotalExpenses() | currency}}</h5>
         <h4>Incomes</h4>
         <p class="animate-fade" ng-repeat="income in track.getIncomes()">
             {{income.amount | currency}} | {{income.comment}} | {{income.date | date : 'short'}}
+            <span ng-if="income.saveError" class="label label-danger">Not synced! Try again.</span>
+            <span ng-if="income.saveSuccess" class="label label-success">Saved</span>
         </p>
         <h5>Total: {{track.getTotalIncomes() | currency}}</h5>
     </div>
