--- a/views/track.html
+++ b/views/track.html
@@ -8,6 +8,13 @@
                     <input type="text" class="form-control" ng-model="track.amount"/>
                 </div>
             </div>
+            <div class="col-md-2 form-group">
+                <label class="control-label">Category</label>
+                <select class="form-control" ng-model="track.category"
+                  ng-options="c for c in track.categories | orderBy: 'toString()'">
+                  <option></option>
+                </select>
+            </div>
             <div class="col-md-4 form-group">
                 <label class="control-label">Comment</label>
                 <input type="text" class="form-control" ng-model="track.comment"/>
@@ -31,7 +38,8 @@
         <p class="text-danger"><strong>Total: {{track.getTotalExpenses() | currency}}</strong></p>
         <div class="row animate-fade" ng-repeat="expense in track.getExpenses()">
             <span class="col-md-2">{{expense.amount | currency}}</span>
-            <span class="col-md-6">{{expense.comment}}</span>
+            <span class="col-md-2">{{expense.category}}</span>
+            <span class="col-md-4">{{expense.comment}}</span>
             <span class="col-md-3">{{expense.date | date : 'short'}}</span>
             <span ng-if="expense.saveError" class="col-md-1 label label-danger">Not synced! Try again.</span>
             <span ng-if="expense.saveSuccess" class="col-md-1 label label-success">Saved</span>
@@ -42,7 +50,8 @@
         <p class="text-success"><strong>Total: {{track.getTotalIncomes() | currency}}</strong></p>
         <div class="row animate-fade" ng-repeat="income in track.getIncomes()">
             <span class="col-md-2">{{income.amount | currency}}</span>
-            <span class="col-md-6">{{income.comment}}</span>
+            <span class="col-md-2">{{income.category}}</span>
+            <span class="col-md-4">{{income.comment}}</span>
             <span class="col-md-3">{{income.date | date : 'short'}}</span>
             <span ng-if="income.saveError" class="label label-danger">Not synced! Try again.</span>
             <span ng-if="income.saveSuccess" class="label label-success">Saved</span>
