Make the tracking/recent events view the default/landing page, and get rid of the old 'Home'.

--- a/views/track.html
+++ b/views/track.html
@@ -1,4 +1,5 @@
 <div>
+    <h3>{{track.today | date:'fullDate'}}</h3>
     <ng-form role="form" novalidate>
         <div class="row">
             <div class="col-md-2 form-group">
