Add start of Preferences UI, not functional yet.

--- a/views/track.html
+++ b/views/track.html
@@ -6,7 +6,7 @@
                 <label class="control-label">Amount</label>
                 <div class="input-group">
                     <div class="input-group-addon">$</div>
-                    <input type="text" class="form-control" ng-model="track.amount"/>
+                    <input type="text" class="form-control" ng-model="track.amount">
                 </div>
             </div>
             <div class="col-md-2 form-group">
@@ -18,11 +18,11 @@
             </div>
             <div class="col-md-4 form-group">
                 <label class="control-label">Comment</label>
-                <input type="text" class="form-control" ng-model="track.comment"/>
+                <input type="text" class="form-control" ng-model="track.comment">
             </div>
             <div class="col-md-3 form-group">
                 <label class="control-label">Date</label>
-                <input type="date" class="form-control" ng-model="track.date"/>
+                <input type="date" class="form-control" ng-model="track.date">
             </div>
         </div>
         <div class="row">
